Fix typo in dpkg-source(1), s/-su/-sU/.

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -395,7 +395,7 @@ is the default.
 .BR -sa ", " -sp ", " -sk ", " -su " and "  -sr
 will not overwrite existing tarfiles or directories.  If this is
 desired then
-.BR -sA ", " -sP ", " -sK ", " -su " and "  -sR
+.BR -sA ", " -sP ", " -sK ", " -sU " and "  -sR
 should be used instead.
 .TP
 .BR -sp , -su , -sn " with " -x
