Add dpkg-scansources to dpkg-scanpackages(8).

--- a/scripts/dpkg-scanpackages.8
+++ b/scripts/dpkg-scanpackages.8
@@ -104,4 +104,5 @@ maintainer substitutions which do not take effect.
 .
 .SH SEE ALSO
 .BR dpkg (8),
-.BR dselect (8).
+.BR dselect (8),
+.BR dpkg-scansources (8).
