--- a/debian/changelog
+++ b/debian/changelog
@@ -113,6 +113,7 @@ dpkg (1.10) unstable; urgency=low
     requirement that the version has to be in the changelog.  Closes:
     Bug#117968.
   * Fix typo in dpkg-source(1), s/-su/-sU/.  Closes: Bug#126340.
+  * Add dpkg-scansources to dpkg-scanpackages(8).  Closes: Bug#147924.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
