--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun May 26 01:28:00 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/dpkg.postinst: Fix /usr/info/dir moving/symlink code.
+
 Sun May 26 01:10:24 CDT 2002 Adam Heath <doogie@debian.org>
 
   * Fix some mis-merging of the 1.9 branch:
