Updated Swedish translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun May 26 18:50:10 CET 2002 Peter Karlsson <peterk@debian.org>
+
+  * man/sv/dpkg.8, man/sv/start-stop-daemon.8, po/sv.po: Updated Swedish
+    translation.
+
 Sun May 26 01:35:34 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/tarfn.c: dpkg now reorders symlinks when extracting debs.  However,
