--- a/man/sv/dpkg.8
+++ b/man/sv/dpkg.8
@@ -1,5 +1,5 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.31
+.\" Translation of CVS revision 1.32
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Dpkg-sviten"
 .SH NAMN
 dpkg \- en mellannivåpakethanterare för Debian
@@ -397,12 +397,20 @@ Installera även om paket som är i konflikt (krockar) med ett annat paket.
 Detta är farligt, eftersom det oftast leder till att vissa filer skrivs
 över.
 
+\fBconfmiss\fP:
+Installera alltid saknade konfigurationsfiler.
+Detta är farligt, eftersom det inte bibehåller ändringar (raderingar) av
+filer.
+
 \fBconfnew\fP:
 Installera alltid nya versioner av ändrade konfigurationsfiler utan att
-fråga.
+fråga, såvida inte \fB--force-confdef\fP också anges, i vilket fall det
+förvalda alternativet kommer att utföras.
 
 \fBconfold\fP:
-Installera aldrig nya versioner av ändrade konfigurationsfiler.
+Installera aldrig nya versioner av ändrade konfigurationsfiler utan
+att fråga, såvida inte \fB--force-confdef\fP också anges, i vilket fall
+det förvalda alternativet kommer att utföras.
 
 \fBconfdef\fP:
 Utför alltid förvalt alternativt för ändrade konfigurationsfiler.
