--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 27 21:13:00 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * po/de.po, po/fr.po, po/gl.po: Updated.
+
 Sun May 26 18:50:10 CET 2002 Peter Karlsson <peterk@debian.org>
 
   * man/sv/dpkg.8, man/sv/start-stop-daemon.8, po/sv.po: Updated Swedish
