--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.10) unstable; urgency=low
   * Update French translation.
   * Update Brazilian translation.
   * Update Danish translation.
+  * Update Galician translation.
   * Add Catalan translation
   * Add German md5sum manpage
   * Add Brazilian update-alternatives manpage. Closes: Bug#122132
