Update French manpages

--- a/man/fr/deb-control.5
+++ b/man/fr/deb-control.5
@@ -1,11 +1,11 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller
 .\" Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-.\" Traduction de la révision CVS 1.6
-.TH DEB-CONTROL 5 "January 2000" "Debian Project" "Debian GNU/Linux"
+.\" Traduction de la révision CVS 1.1
+.TH DEB-CONTROL 5 "January 2000" "Debian Project" "Utilitaires de dpkg"
 .SH NOM
 deb\-control \- Format du fichier principal de contrôle dans les paquets
-Debian GNU-Linux 
+Debian
 .SH SYNOPSIS
 contrôle
 .SH DESCRIPTION
