--- a/man/fr/dpkg-scanpackages.8
+++ b/man/fr/dpkg-scanpackages.8
@@ -13,7 +13,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with dpkg; if not, write to the Free Software
 .\" Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-.\" Traduction de la version cvs 1.3
+.\" Traduction de la version cvs 1.4
 .TH DPKG-SCANPACKAGES 8 "1996-07-08" "Projet Debian" "Utilitaires de Dpkg"
 .SH NOM
 dpkg-scanpackages \- créer des fichiers «\ Packages\ »
@@ -111,9 +111,10 @@ sous-répertoire, existent en double exemplaire, ont des champs
 pas s'appliquer.
 .SH VOIR AUSSI
 .BR dpkg (8),
-.BR dselect (8).
+.BR dselect (8),
+.BR dpkg-scansources (8).
 .SH TRADUCTION
-Philippe Batailler, Janvier 2001.
+Philippe Batailler <pbatailler@teaser.fr>, Mai 2002.
 
 
 
