Updated Russian translation

--- a/po/ru.po
+++ b/po/ru.po
@@ -4343,7 +4343,7 @@ msgstr "неожиданное состояние процесса-потомка: ожидалось %ld, получено %ld"
 #: dselect/method.cc:184
 #, c-format
 msgid "returned error exit status %d.\n"
-msgstr "возвращенный код ошибки %d.\n"
+msgstr "вернул код ошибки %d.\n"
 
 #: dselect/method.cc:188
 msgid "was interrupted.\n"
