--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  1 22:04:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * po/ru.po: Updated
+
 Fri May 31 21:46:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/fr/dpkg-scanpackages.8, man/fr/dpkg-source.1, man/fr/dpkg.8,
