--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.10) unstable; urgency=low
   * Update Brazilian translation.
   * Update Danish translation.
   * Update Galician translation.
+  * Update Portuguese translations.
   * Add Catalan translation
   * Add German md5sum manpage
   * Add Brazilian update-alternatives manpage. Closes: Bug#122132
