--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  1 16:17:59 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * po/pt_BR.po: Updated.
+
 Sat Jun  1 22:04:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * po/ru.po: Updated
