--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jun  1 16:45:13 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
+    split/main.c: Fixed printversion(), to allow translations to be done
+    better.
+
 Sat Jun  1 16:17:59 CDT 2002 Adam Heath <doogie@debian.org>
 
   * po/pt_BR.po: Updated.
