Fix broken merge from 1.9 branch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 20 00:54:54 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/install-info.pl: Fix broken merge from 1.9 branch.
+
 Sat Jun  1 23:22:19 CDT 2002 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
