--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun 22 14:02:32 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * version-nr, debian/changelog: Start 1.11
+
 Fri Jun 21 21:53:24 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/dpkg.postinst: Merge patch from Josip Rodin to improve
