--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.11) unstable; urgency=low
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Sat, 22 Jun 2002 14:02:59 +0200
+
 dpkg (1.10) unstable; urgency=low
 
   * dpkg now reorders symlinks when extracting debs.  However, this is also
