Apply (modified version of) patch from Josip Rodin to improve bits of documentation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.11) unstable; urgency=low
 
   * Move dselect methods to dselect package
+  * Improve long package descriptions
+  * Improve formatting of dpkg manpage
 
  -- Wichert Akkerman <wakkerma@debian.org>  Sat, 22 Jun 2002 14:02:59 +0200
 
