--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 22 14:17:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/control, man/en/dpkg.8.sgml, main/dpkg.8: Apply (modified version
+    of) patch from Josip Rodin to improve bits of documentation
+
 Sat Jun 22 14:10:43 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/rules: Install dselect methods in dselect package
