--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 22 16:13:42 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * scripts/dpkg-checkbuilddeps.pl: remove forced check for build-essential,
+    we should not hardcode Debian policy into dpkg
+
 Sat Jun 22 14:17:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/control, man/en/dpkg.8.sgml, main/dpkg.8: Apply (modified version
