Add ~ to the list of legal characters in a package filename

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.11) unstable; urgency=low
   * Improve long package descriptions
   * Improve formatting of dpkg manpage
   * dpkg-checkbuilddeps no longer checks for build-essential
+  * Make dpkg-genchanges accept ~ as part of a package filename.
+    Closes: Bug#150739
 
  -- Wichert Akkerman <wakkerma@debian.org>  Sat, 22 Jun 2002 14:02:59 +0200
 
