--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jun 23 00:45:19 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * scripts/dpkg-genchanges.pl: Add ~ to the list of legal characters
+    in a package filename
+
 Sat Jun 22 16:13:42 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * scripts/dpkg-checkbuilddeps.pl: remove forced check for build-essential,
