add conflict with dpkg-iasearch which intruded on our namespace and replace manpages-de which includes one of our manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,7 @@
-Sun Jun 23 00:45:19 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+Mon Jul  1 14:45:11 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
-  * scripts/dpkg-genchanges.pl: Add ~ to the list of legal characters
-    in a package filename
-
-Sat Jun 22 16:13:42 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
-
-  * scripts/dpkg-checkbuilddeps.pl: remove forced check for build-essential,
-    we should not hardcode Debian policy into dpkg
-
-Sat Jun 22 14:17:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
-
-  * debian/control, man/en/dpkg.8.sgml, main/dpkg.8: Apply (modified version
-    of) patch from Josip Rodin to improve bits of documentation
-
-Sat Jun 22 14:10:43 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
-
-  * debian/rules: Install dselect methods in dselect package
-
-Sat Jun 22 14:02:32 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
-
-  * version-nr, debian/changelog: Start 1.11
+  * debian/control: add conflict with dpkg-iasearch which intruded on
+    our namespace and replace manpages-de which includes one of our manpages
 
 Fri Jun 21 21:53:24 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
