--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,9 @@
-dpkg (1.11) unstable; urgency=low
+dpkg (1.10.1) unstable; urgency=low
 
-  * Move dselect methods to dselect package
-  * Improve long package descriptions
-  * Improve formatting of dpkg manpage
-  * dpkg-checkbuilddeps no longer checks for build-essential
-  * Make dpkg-genchanges accept ~ as part of a package filename.
-    Closes: Bug#150739
+  * Add conflict with dpkg-iasearch which intruded on our namespace
+  * Replace manpages-de which includes one of our manpages
 
- -- Wichert Akkerman <wakkerma@debian.org>  Sat, 22 Jun 2002 14:02:59 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
 dpkg (1.10) unstable; urgency=low
 
