Don't always call autoheader during build.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.10.1) unstable; urgency=low
 
   * Add conflict with dpkg-iasearch which intruded on our namespace
   * Replace manpages-de which includes one of our manpages
+  * Don't always call autoheader when building.  Closes: #151471.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
