--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul  2 01:04:29 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: Don't always call autoheader during build.
+
 Mon Jul  1 14:45:11 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/control: add conflict with dpkg-iasearch which intruded on
