--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 dpkg (1.10.1) unstable; urgency=low
 
   * Add conflict with dpkg-iasearch which intruded on our namespace
-  * Replace manpages-de which includes one of our manpages
+  * Replace manpages-de which includes one of our manpages  Closes:
+    #151485.
   * Don't always call autoheader when building.  Closes: #151471.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
