sync dpkg and dpkg-static dependencies, fix double conflict for dpkg

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul  2 09:41:44 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/control: sync dpkg and dpkg-static dependencies, fix double
+    conflict for dpkg
+
 Tue Jul  2 01:04:29 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/rules: Don't always call autoheader during build.
