--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.10.1) unstable; urgency=low
   * Replace manpages-de which includes one of our manpages  Closes:
     #151485.
   * Don't always call autoheader when building.  Closes: #151471.
+  * Fix double conflict in dpkg. Closes: Bug#151581
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
