Backport fixed from HEAD

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jul  2 09:46:01 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * Merge from HEAD:
+    + scripts/dpkg-genchanges.pl: Add ~ to the list of legal characters
+      in a package filename
+    + scripts/dpkg-checkbuilddeps.pl: remove forced check for build-essential,
+      we should not hardcode Debian policy into dpkg
+
 Tue Jul  2 09:41:44 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/control: sync dpkg and dpkg-static dependencies, fix double
