Backport fixed from HEAD

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ dpkg (1.10.1) unstable; urgency=low
     #151485.
   * Don't always call autoheader when building.  Closes: #151471.
   * Fix double conflict in dpkg. Closes: Bug#151581
+  * Move dselect methods to dselect package
+  * dpkg-checkbuilddeps no longer checks for build-essential. dpkg should
+    not hardcode Debian policy
+  * Make dpkg-genchanges accept ~ as part of a package filename
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
